--- a/HTML/index.html
+++ b/HTML/index.html
@@ -253,7 +253,7 @@
             <div class="row">
               <div class="col-2"></div>
               <div id="ZonaA" class="col-8">
-                <h1 class="nom-maquina">Maquina 1</h1>
+                <h1 class="nom-maquina">Python Machine</h1>
                 <div class="row mt-4 ">
                   <div class="col-1"></div>         
                   <div id="Maq01" class="col-10">
@@ -286,7 +286,7 @@
             <div class="row">
               <div class="col-2"></div>
               <div class="col-8">
-                <h1 class="nom-maquina">Maquina 2</h1>
+                <h1 class="nom-maquina">Java Machine</h1>
                 <div class="row mt-4">
                   <div class="col-1"></div>
                   <div id="Maq02" class="col-10">
